@@ -6,6 +6,7 @@ CHANGELOG Roundcube Webmail
 - Fix bug where getting HTML editor content could steal focus from other form controls (#5223)
 - Fix bug where contact search menu fields where always unchecked in Larry skin
 - Fix autoloading of 'html' class
+- Fix bug where Encrypt button appears when switching editor to HTML (#5235)
 
 RELEASE 1.2-rc
 --------------
